--- a/README
+++ b/README
@@ -13,3 +13,5 @@ Step 4:  run as: python etf.py <from email password>
 Debug
 
 You will get an error if your email account doen't allow for apps like this to access it, for gmail turn this on (and then off after), at "Less secure apps" section https://www.google.com/settings/security/lesssecureapps
+
+post ETF rejection edit: Hope you all made lots of shorting money from this, try it again if there's another ETF proposal!
